Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-54710

QAudioRecorder creates WAV-files with incorrect header (incorrect size of "data" chunk)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.2
    • 5.4.2, 5.7.0
    • Multimedia
    • None
    • Windows 7 64bit
    • b76958f23e971e25a38ed2b9525dcca1cb3d954d

    Description

      Incorrect WAV header for WAV-files recorded by QAudioRecorder (incorrect size of "data" chunk of WAV-file).
      Actual "data" chunk size is 8 bytes bigger than size written in "data" chunk header by QAudioRecorder.

      Error at audiocapturesession.cpp function AudioCaptureSession::stop()
      Error line:
      header.data.descriptor.size = fileSize-44; // samples*channels*sampleSize/8
      Correct:
      header.data.descriptor.size = file.size()-44; // samples*channels*sampleSize/8

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ylopes Yoann Lopes
            ag3nt Dmitriy Gilfanov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes