AudioCapture: fix data chunk size in WAV header

The size in the data chunk was missing 8 bytes.

Task-number: QTBUG-54710
Change-Id: I0530ea9d2420dd90d196993e1678003697c0ebaa
Reviewed-by: Christian Stromme <christian.stromme@qt.io>